Cleaned up some bugs found by findbugs